--- a/package.json
+++ b/package.json
@@ -1,26 +1,42 @@
 {
-  "name": "aqa-advanced",
-  "version": "2.0.0",
-  "description": "Test desc",
-  "keywords": [
-    "nodejs"
-  ],
-  "homepage": "https://github.com/AChentsova/aqa-advanced#readme",
-  "bugs": {
-    "url": "https://github.com/AChentsova/aqa-advanced/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AChentsova/aqa-advanced.git"
-  },
-  "license": "MIT",
-  "author": "Anna C",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "chalk": "^5.6.2"
-  }
+	"name": "aqa-advanced",
+	"version": "2.0.0",
+	"description": "Test desc",
+	"keywords": [
+		"nodejs",
+		"husky",
+		"eslint",
+		"prettier"
+	],
+	"homepage": "https://github.com/AChentsova/aqa-advanced#readme",
+	"bugs": {
+		"url": "https://github.com/AChentsova/aqa-advanced/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/AChentsova/aqa-advanced.git"
+	},
+	"license": "MIT",
+	"author": "Anna C",
+	"type": "module",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"format": "prettier . --write",
+		"lint": "npx eslint --fix .",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"chalk": "^5.6.2"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.39.2",
+		"@eslint/json": "^0.14.0",
+		"@eslint/markdown": "^7.5.1",
+		"eslint": "^9.39.2",
+		"globals": "^16.5.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^16.2.7",
+		"prettier": "3.7.4"
+	}
 }
