--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"format": "prettier . --write",
 		"lint": "npx eslint --fix .",
 		"prepare": "husky"
 	},
 	"dependencies": {
-		"chalk": "^5.6.2"
+		"axios": "^1.13.2",
+		"chalk": "^5.6.2",
+		"jest": "^30.2.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.2",
